# ga-python-template

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  env.example  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  security.yml
app/: __init__.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: hello.py
app/core/: config.py  exceptions.py  middleware.py  resources.py
app/schemas/: common.py  hello.py
app/services/: hello.py
tests/: conftest.py  test_hello.py  test_main.py
